feat(user): 사용자 구매자 판매자 전환 API 추가